--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -1,4 +1,5 @@
 ﻿{% load static %}
+{% load socialaccount %}
 {% load dictionary_filters %}
 <!DOCTYPE html>
 <html lang="en">
@@ -30,10 +31,12 @@
     {% for issue in issue_list %}
         <!-- Source for tooltips https://getbootstrap.com/docs/4.0/components/tooltips/ -->
         <div id="{{ issue.id_name }}" class="issue-header {% if issue.name in top_issues %}top-issue{% endif %}">
-            {% if issue.name in top_issues %}
-                <i class="fa fa-star" data-toggle="tooltip" data-placement="right" title="Remove from Top Issues" onclick="UnlikeIssue({{ issue.id }}, '{{ issue.id_name }}')"></i>
-            {% else %}
-                <i class="fa fa-star-o" data-toggle="tooltip" data-placement="right" title="Add to Top Issues" onclick="LikeIssue({{ issue.id }}, '{{ issue.id_name }}')"></i>
+            {% if user.is_authenticated %}
+                {% if issue.name in top_issues %}
+                    <i class="fa fa-star" data-toggle="tooltip" data-placement="right" title="Remove from Top Issues" onclick="UnlikeIssue({{ issue.id }}, '{{ issue.id_name }}')"></i>
+                {% else %}
+                    <i class="fa fa-star-o" data-toggle="tooltip" data-placement="right" title="Add to Top Issues" onclick="LikeIssue({{ issue.id }}, '{{ issue.id_name }}')"></i>
+                {% endif %}
             {% endif %}
             {{ issue.name.upper }}
         </div>
@@ -53,16 +56,28 @@
 </body>
 </html>
 <script>
+    //Source for JavaScript POST requests https://www.w3schools.com/xml/ajax_xmlhttprequest_send.asp
     var UnlikeIssue = function (id, issue_name) {
+        //Send POST request to update database
+        var ajax = new XMLHttpRequest();
+        ajax.open("POST", "{% url 'main_page:update_top_issues' %}", true);
+        ajax.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        ajax.send("username={{ user.username }}&issueid=" + id + "&action=remove");
         alert("Unliking issue #" + id + " - " + issue_name);
+        alert(ajax.responseText);
+
+        //Update HTML
         var header = document.getElementById(issue_name);
         header.classList.remove("top-issue");
         var star = header.children[0];
         star.classList.remove("fa-star");
         star.classList.add("fa-star-o");
+        /*
         star.onClick = function () {
             LikeIssue(id, issue_name);
         }
+        */
+        star.setAttribute("onClick", "LikeIssue(" + id + ", " + issue_name + ")");
     };
     var LikeIssue = function (id, issue_name) {
         alert("Liking issue #" + id + " - " + issue_name);
@@ -71,8 +86,11 @@
         var star = header.children[0];
         star.classList.remove("fa-star-o");
         star.classList.add("fa-star");
+        /*
         star.onClick = function () {
             UnlikeIssue(id, issue_name);
         }
+        */
+        star.setAttribute("onClick", "LikeIssue(" + id + ", " + issue_name + ")");
     };
 </script>
