--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -89,6 +89,6 @@
         var star = header.children[0];
         star.classList.remove("fa-star-o");
         star.classList.add("fa-star");
-        star.setAttribute("onClick", "LikeIssue(" + id + ", '" + issue_name + "')");
+        star.setAttribute("onClick", "UnlikeIssue(" + id + ", '" + issue_name + "')");
     };
 </script>
