--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -64,7 +64,12 @@
         ajax.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         ajax.send("username={{ user.username }}&issueid=" + id + "&action=remove");
         alert("Unliking issue #" + id + " - " + issue_name);
-        alert(ajax.responseText);
+        ajax.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                alert(this.responseText)
+            }
+        };
+    };
 
         //Update HTML
         var header = document.getElementById(issue_name);
@@ -81,7 +86,11 @@
         ajax.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         ajax.send("username={{ user.username }}&issueid=" + id + "&action=add");
         alert("Liking issue #" + id + " - " + issue_name);
-        alert(ajax.responseText);
+        ajax.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                alert(this.responseText)
+            }
+        };
 
         //Update HTML
         var header = document.getElementById(issue_name);
