--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -67,6 +67,8 @@
         ajax.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 alert(this.responseText)
+            } else if (this.readyState == 4) {
+                alert(this.status);
             }
         };
 
@@ -88,6 +90,8 @@
         ajax.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
                 alert(this.responseText)
+            } else if (this.readyState == 4) {
+                alert(this.status);
             }
         };
 
