--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -56,10 +56,25 @@
 </body>
 </html>
 <script>
+    //Get Cookie function from Django documentation
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    var csrfToken = getCookie('csrftoken');
+
     //Source for JavaScript POST requests https://www.w3schools.com/xml/ajax_xmlhttprequest_send.asp
-
-    var csrfToken = Cookies.get('csrftoken');
-
     var UnlikeIssue = function (id, issue_name) {
         //Send POST request to update database
         var ajax = new XMLHttpRequest();
