--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -56,7 +56,7 @@
 </body>
 </html>
 <script>
-    //Get Cookie function from Django documentation
+    //Get Cookie function from Django documentation https://docs.djangoproject.com/en/3.1/ref/csrf/
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
