--- a/email_sys/templates/email_sys/email_sent.html
+++ b/email_sys/templates/email_sys/email_sent.html
@@ -31,7 +31,7 @@
     </div>
 
     {% if text_body %}
-        <meta http-equiv="refresh" content="0; mailto:{{email_text}}}?subject={{subject}}&body={{text_body}}" />
+        <meta http-equiv="refresh" content="0; mailto:{{email_text}}?subject={{subject}}&body={{text_body}}" />
     {% else %}
         <meta http-equiv="refresh" content="0; mailto:{{email_text}}" />
     {% endif %}
