--- a/email_sys/templates/email_sys/email_sent.html
+++ b/email_sys/templates/email_sys/email_sent.html
@@ -19,6 +19,9 @@
     <style>
         h1    {color:black;}
         .title_div   {margin: 100px;}
+        body{
+        background: white url("images/thumbs_up.png") no-repeat;
+    }
 
     </style>
 
