--- a/main_page/templates/main_page/resources.html
+++ b/main_page/templates/main_page/resources.html
@@ -109,3 +109,5 @@
         star.setAttribute("onClick", "UnlikeIssue(" + id + ", '" + issue_name + "')");
     };
 </script>
+
+{% include 'main_page/footer.html' %}
