--- a/email_sys/templates/email_sys/email_prompt.html
+++ b/email_sys/templates/email_sys/email_prompt.html
@@ -1,4 +1,4 @@
-{% load static %}
+﻿{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +27,7 @@
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             {% for template in templates_list %}
-                <a class="dropdown-item" href="#">{{template.title}}</a>
+                <a class="dropdown-item" href="#">{{ template.title }}</a>
             {% endfor %}
         </div>
     </div>
