--- a/main_page/templates/main_page/navbar.html
+++ b/main_page/templates/main_page/navbar.html
@@ -19,13 +19,11 @@
         <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
         <div class="collapse navbar-collapse text-right">
             <ul class="navbar-nav ml-auto flex-nowrap">
-                <li class="nav-item dropdown">
+                <li class="dropdown">
                     {% if user.is_authenticated %}
                     <!-- Dropdown source https://getbootstrap.com/docs/3.4/examples/navbar/ -->
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="caret"></span>
-                        {{ user.username }}
-                        <img class="login-icon" src="{% static 'main_page/user_icon.png' %}" alt="user" />
+                        <span class="caret"></span>{{ user.username.strip }}<img class="login-icon" src="{% static 'main_page/user_icon.png' %}" alt="user" />
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="UserMenu">
                         <li><a class="dropdown-item" href="#">Log Out</a></li>
