--- a/main_page/templates/main_page/navbar.html
+++ b/main_page/templates/main_page/navbar.html
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="{% static 'main_page/navbar.css' %}" />
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">CivicConnect</a>
-        <div id="navbarNav">
-            <ul class="navbar-nav">
+        <div id="navbarNav" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'main_page:home_page' %}">Home</a>
                 </li>
@@ -15,10 +15,7 @@
                     <a class="nav-link" href="{% url 'main_page:resource_page' %}">Resources</a>
                 </li>
             </ul>
-        </div>
-        <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
-        <div class="collapse navbar-collapse text-right">
-            <ul class="navbar-nav ml-auto flex-nowrap">
+            <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     {% if user.is_authenticated %}
                     <!-- Dropdown source https://getbootstrap.com/docs/3.4/examples/navbar/ -->
