Revert "Merge branch 'dev-kalman'"
This reverts commit 93312f1dbe006d5211fb31032c5be103651d0a63, reversing
changes made to ea7c05a636318b0b34f3a7ce173a0f64a3bfecff.

--- a/email_sys/templates/email_sys/email_prompt.html
+++ b/email_sys/templates/email_sys/email_prompt.html
@@ -1,4 +1,4 @@
-﻿{% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +27,7 @@
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             {% for template in templates_list %}
-                <a class="dropdown-item" href="#">{{ template.title }}</a>
+                <a class="dropdown-item" href="#">{{template.title}}</a>
             {% endfor %}
         </div>
     </div>
