--- a/main_page/templates/main_page/navbar.html
+++ b/main_page/templates/main_page/navbar.html
@@ -1,44 +1,37 @@
 {% load socialaccount %}
 {% load static %}
-    <link rel="stylesheet" href="{% static 'main_page/navbar.css' %}" />
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">CivicConnect</a>
-        <div id="navbarNav" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'main_page:home_page' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'email_sys:prompt_page' %}">Email</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'main_page:resource_page' %}">Resources</a>
-                </li>
-            </ul>
-        </div>
-        <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
-        <div class="collapse navbar-collapse text-right">
-            <ul class="navbar-nav ml-auto flex-nowrap">
-                <li class="nav-item dropdown">
-                    {% if user.is_authenticated %}
-                    <!-- Dropdown source https://getbootstrap.com/docs/3.4/examples/navbar/ -->
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="caret"></span>
-                        {{ user.username }}
-                        <img class="login-icon" src="{% static 'main_page/user_icon.png' %}" alt="user" />
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="UserMenu">
-                        <li><a class="dropdown-item" href="#">Log Out</a></li>
-                    </ul>
-                    {% else %}
-                    <a class="nav-link" href="{% provider_login_url 'google' %}">
-                        Login
-                        <img class="login-icon" src="{% static 'main_page/login_icon.png' %}" alt="key" />
-                    </a>
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-   
+<link rel="stylesheet" href="{% static 'main_page/navbar.css' %}" />
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">CivicConnect</a>
+    <div id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'main_page:home_page' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'email_sys:prompt_page' %}">Email</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'main_page:resource_page' %}">Resources</a>
+            </li>
+        </ul>
+    </div>
+    <!-- Source for Right-Align https://www.codeply.com/go/qhaBrcWp3v -->
+    <div class="collapse navbar-collapse text-right">
+        <ul class="navbar-nav ml-auto flex-nowrap">
+            <li class="nav-item">
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'main_page:home_page' %}">
+                    {{ user.username }}
+                    <img class="login-icon" src="{% static 'main_page/user_icon.png' %}" alt="user" />
+                </a>
+                {% else %}
+                <a class="nav-link" href="{% provider_login_url 'google' %}">
+                    Login
+                    <img class="login-icon" src="{% static 'main_page/login_icon.png' %}" alt="key" />
+                </a>
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+</nav>
