--- a/main_page/static/main_page/navbar.css
+++ b/main_page/static/main_page/navbar.css
@@ -6,3 +6,11 @@
 a > label {
 	cursor: pointer;
 }
+
+.footer {
+	position: absolute;
+	background-color:aliceblue;
+	bottom: 0;
+	width: 100%;
+	height: 3.5rem; 
+}
