--- a/main_page/static/main_page/navbar.css
+++ b/main_page/static/main_page/navbar.css
@@ -10,7 +10,7 @@ a > label {
 .footer {
 	position: absolute;
 	background-color:aliceblue;
-	/* bottom: 0; */
+	bottom: 0;
 	width: 100%;
 	height: 3.5rem; 
 }
