update template parameters

--- a/email_sys/templates/email_sys/email_view.html
+++ b/email_sys/templates/email_sys/email_view.html
@@ -126,7 +126,7 @@
                                         
                                         <input name="email_dropdown" value="{{ email_text }}" type="hidden" />
                                         <button class="dropdown-item" type = "submit">{{ template.title }}</button>
-                                        <!--<a class="dropdown-item" type = "submit" href="{% url 'email_sys:template_email_page' template.id %}">{{ template.title }}</a>-->
+                                        <!--<a class="dropdown-item" type = "submit" href="{% url 'email_sys:template_email_page' template.id %}2">{{ template.title }}</a>-->
                                     </form>
                                 {% endfor %}
                                 <!--<a class="dropdown-item" href="#">More Templates</a>-->
