--- a/email_sys/templates/email_sys/email_view.html
+++ b/email_sys/templates/email_sys/email_view.html
@@ -142,7 +142,7 @@
                 <div class ="title">
                     <label for = "emailTextArea">Don't know who to email? Find a government official!</label>
                     <hr />
-                    <a class="btn btn-primary btn-lg" href="{% url 'main_page:home_page' %}" role="button">Find Government Offical</a>
+                    <a class="btn btn-primary btn-lg" href="{% url 'main_page:home_page' %}" role="button">Find Government Official</a>
                 </div>
 
             </div>
